--- a/index.html
+++ b/index.html
@@ -343,41 +343,46 @@
         <h3>Settings</h3>
 
         <!-- custom CSS toggle code-->
-        <p>Send Email Notifications</p>
-        <div class="onoffswitch">
-          <input
-            type="checkbox"
-            name="onoffswitch"
-            class="onoffswitch-checkbox"
-            id="myonoffswitch"
-            checked
-          />
-          <label class="onoffswitch-label" for="myonoffswitch">
-            <span class="onoffswitch-inner"></span>
-            <span class="onoffswitch-switch"></span>
-          </label>
+        <div class="toggle-div">
+          <p>Send Email Notifications</p>
+          <div class="onoffswitch">
+            <input
+              type="checkbox"
+              name="onoffswitch"
+              class="onoffswitch-checkbox"
+              id="myonoffswitch"
+              checked
+            />
+            <label class="onoffswitch-label" for="myonoffswitch">
+              <span class="onoffswitch-inner"></span>
+              <span class="onoffswitch-switch"></span>
+            </label>
+          </div>
         </div>
         <!-- custom CSS toggle code-->
-        <p>Set Profile to Public</p>
-        <div class="onoffswitch">
-          <input
-            type="checkbox"
-            name="onoffswitch"
-            class="onoffswitch-checkbox"
-            id="myonoffswitch"
-            checked
-          />
-          <label class="onoffswitch-label" for="myonoffswitch">
-            <span class="onoffswitch-inner"></span>
-            <span class="onoffswitch-switch"></span>
-          </label>
+        <div class="toggle-div">
+          <p>Set Profile to Public</p>
+          <div class="onoffswitch">
+            <input
+              type="checkbox"
+              name="onoffswitch"
+              class="onoffswitch-checkbox"
+              id="myonoffswitch-2"
+              checked
+            />
+            <label class="onoffswitch-label" for="myonoffswitch-2">
+              <span class="onoffswitch-inner"></span>
+              <span class="onoffswitch-switch"></span>
+            </label>
+          </div>
         </div>
 
         <!--form field-->
         <select class="form-field" id="time-zone">
           <option disabled selected>Select a Timezone</option>
           <option>Eastern</option>
-
+          <option>Central</option>
+          <option>Pacific</option>
           <!-- more options -->
         </select>
         <div class="settings-button">
