--- a/index.html
+++ b/index.html
@@ -242,7 +242,11 @@
         <h3>New Members</h3>
 
         <div class="members-container">
-          <img src="images/member-1.jpg" class="profile-image members-image" />
+          <img
+            src="images/member-1.jpg"
+            alt="Victoria Chamber's Photo"
+            class="profile-image members-image"
+          />
           <div class="members-text">
             <p>Victoria Chambers</p>
             <a href="#">victoria.chambers80@example.com</a>
@@ -251,7 +255,11 @@
         </div>
 
         <div class="members-container">
-          <img src="images/member-2.jpg" class="profile-image" />
+          <img
+            src="images/member-2.jpg"
+            alt="Dale Byrd's Photo"
+            class="profile-image"
+          />
           <div class="members-text">
             <p>Dale Byrd</p>
             <a href="#">dale.byrd52@example.com</a>
@@ -260,7 +268,11 @@
         </div>
 
         <div class="members-container">
-          <img src="images/member-3.jpg" class="profile-image" />
+          <img
+            src="images/member-3.jpg"
+            alt="Dawn Wood's Photo"
+            class="profile-image"
+          />
           <div class="members-text">
             <p>Dawn Wood</p>
             <a href="#">dawn.wood16@example.com</a>
@@ -269,7 +281,11 @@
         </div>
 
         <div class="members-container">
-          <img src="images/member-4.jpg" class="profile-image" />
+          <img
+            src="images/member-4.jpg"
+            alt="Dan Oliver's Photo"
+            class="profile-image"
+          />
           <div class="members-text">
             <p>Dan Oliver</p>
             <a href="#">dan.oliver82@example.com</a>
@@ -283,7 +299,11 @@
         <h3>Recent Activity</h3>
 
         <div class="activity-container">
-          <img src="images/member-1.jpg" class="profile-image" />
+          <img
+            src="images/member-1.jpg"
+            alt="Victoria Chamber's Photo"
+            class="profile-image"
+          />
           <div class="activity-text">
             <p>Victoria Chambers commented on YourApp's SEO Tips</p>
             <p>4 hours ago</p>
@@ -292,7 +312,11 @@
         </div>
 
         <div class="activity-container">
-          <img src="images/member-2.jpg" class="profile-image" />
+          <img
+            src="images/member-2.jpg"
+            alt="Dale Byrd's Photo"
+            class="profile-image"
+          />
           <div class="activity-text">
             <p>Dale Byrd liked the post Facebook's Changes for 2016</p>
             <p>5 hours ago</p>
@@ -301,7 +325,11 @@
         </div>
 
         <div class="activity-container">
-          <img src="images/member-3.jpg" class="profile-image" />
+          <img
+            src="images/member-3.jpg"
+            alt="Dawn Wood's Photo"
+            class="profile-image"
+          />
           <div class="activity-text">
             <p>Dawn Wood commented on Facebook's Changes for 2016</p>
             <p>5 hours ago</p>
@@ -310,7 +338,11 @@
         </div>
 
         <div class="activity-container">
-          <img src="images/member-4.jpg" class="profile-image" />
+          <img
+            src="images/member-4.jpg"
+            alt="Dan Oliver's Photo"
+            class="profile-image"
+          />
           <div class="activity-text">
             <p>Dan Oliver posted YourApp's SEO Tips</p>
             <p>1 day ago</p>
