--- a/index.html
+++ b/index.html
@@ -424,6 +424,6 @@
       </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="JS/main.js"></script>
   </body>
 </html>
